--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wood Detection Web App</title>
-    <style>
+    <link rel="stylesheet" href="style.css">
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
@@ -18,20 +19,41 @@
             text-align: center;
             margin-bottom: 20px;
         }
+
+        .outline{
+            border: 5 px solid black;
+        }
  
         #result {
             margin-top: 20px;
             text-align: center;
         }
-    </style>
+    </style> -->
 </head>
 <body>
+    <div class="outline">
+        <div class="box">
+     <div class="wood">
+
+       <div class="app">
     <h1>Wood Detection Web App</h1>
+    </div>
+    </div>
+
+    <div class="innerBox">
+        <div class="corebox">
     <form id="image-form" enctype="multipart/form-data">
         <input type="file" name="image" accept="image/*" required>
+        
         <button type="submit">Detect Wood</button>
+       
     </form>
+    </div>
     <div id="result"></div>
+    </div>
+    </div>
+
+    </div>
  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script>
@@ -61,7 +83,9 @@
             .catch(function(error) {
                 console.error('Error:', error);
                 var resultDiv = document.getElementById('result');
+                
                 resultDiv.innerHTML = `<p>An error occurred while processing the image.</p>`;
+                
             });
         });
     </script>
