--- a/templates/index.html
+++ b/templates/index.html
@@ -42,16 +42,24 @@
 
     <div class="innerBox">
         <div class="corebox">
+            <div class="accept">
     <form id="image-form" enctype="multipart/form-data">
         <input type="file" name="image" accept="image/*" required>
-        
-        <button type="submit">Detect Wood</button>
+    </div>
+
+        <div id="detect">
+        <button type="submit" placeholder="Select Dataset" >Submit</button>
+        </div>
        
     </form>
     </div>
     <div id="result"></div>
     </div>
     </div>
+
+    <div class="image">
+    <img src="24.png">
+      </div>
 
     </div>
  
