--- a/templates/style.css
+++ b/templates/style.css
@@ -8,6 +8,32 @@ body {
 h1 {
     text-align: center;
 }
+button{
+    height:20px;
+    width:70px;
+    display:flex;
+    margin-left:300px;
+    margin-top:-40px;
+    cursor:pointer;
+    text-align:center;
+    text-decoration: solid;
+    border-radius: 5px;
+}
+ /* .input[type=file]{
+    text-align:center;
+    text-decoration: solid;
+    border-radius: 5px;
+    display:flex;
+    cursor:pointer;
+   
+} 
+.input[type=file]:hover{
+    background-color: #555555; 
+} */
+
+button:hover {
+    background-color: #555555; 
+}
 
 form {
     text-align: center;
@@ -21,8 +47,8 @@ form {
     margin-left: 400px;
     margin-top: 50px;
     /* padding:300px; */
-    height:400px;
-    width:550px;
+    height:600px;
+    width:560px;
     border: 5px solid black;
     background-color:#2a2a2a;
     display:flex;
@@ -30,9 +56,10 @@ form {
     box-shadow: 10px 10px 10px  black ;
 }
 
+
 .wood{
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 120px;
    
     height:80px;
     width:450px;
@@ -42,7 +69,7 @@ form {
     border-radius: 30px;
     box-shadow: 7px 7px 7px  black ;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: justify;
+    /* text-align: justify; */
     text-decoration: none;
     text-shadow: cadetblue;
     text-align: center;
@@ -57,7 +84,7 @@ form {
 
 .innerBox{
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 40px;
    
     height:50px;
     width:450px;
@@ -67,13 +94,24 @@ form {
     text-align:center;
     border-radius: 20px;
     box-shadow: 5px 5px 5px  black ;
-    position:fixed;
+   
 }
+
+/* .detech{
+    margin-left:200px;
+    margin-top:300px;
+ /* position: fixed; */
+    /* bottom: 0;
+    right: 0; */
+   
+    /* border-radius: 5px;
+    cursor: pointer; 
+} */ */
 
 .innerBox:hover{
      box-shadow: 10px 5px 5px white;
      background-size: 100vw 100vh;
-     position:fixed;
+     /* position:fixed; */
 }
 /* .box{
     background-color: blanchedalmond;
@@ -88,7 +126,9 @@ form {
      color:black;
  }
  .corebox{
-    margin:15px;
+   margin-left: 15px;
+   margin-top: 15px;
+
  }
 
 #result {
@@ -98,20 +138,28 @@ form {
 p{
     display:flex;
     margin-top: 80px;
-    margin-left:-250px;
+    margin-left:-300px;
     color:white;
     text-align: center;
     height:50px;
     width:500px;
     
 }
-.detect{
-    display:flex;
-    margin-top: 100px;
-    margin-left:30px;
-    color:white;
-    text-align: center;
-    height:50px;
-    width:500px;
+/* #detect{
     
+    margin-left:200px;
+    margin-top:-50px;
+    }
+
+.accept{
+    margin-left:5px;
+    margin-top:10px;
+} */
+
+.image{
+    margin-left:-510px;
+    margin-top:-55px;
+    display:flex;
+    height:200px;
+    width:200px;
 }
